--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -61,6 +61,21 @@ h6 {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
 
+.img-shadows{
+  -webkit-box-shadow: 5px 10px 42px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 5px 10px 42px 1px rgba(0,0,0,0.75);
+  box-shadow: 5px 10px 42px 1px rgba(0,0,0,0.75);
+}
+
+.rounded-img {
+  border-radius: 100%;
+  width: 60%;
+  height: 60%;
+  margin-bottom: 15px;
+  text-shadow: center;
+}
+
+
 @media(max-width:767px) {
     .intro-message {
         padding-bottom: 15%;
@@ -167,8 +182,4 @@ footer {
 
 p.copyright {
     margin: 15px 0 0;
-}
-
-.rounded-img {
-  border-radius: 50px;
 }
